apro valtoztatasok leadas elott

--- a/oneletrajz.html
+++ b/oneletrajz.html
@@ -64,6 +64,11 @@
         <b>Videóvágás</b>
     </div>
     <div class="hobbi2">Körölbelül fél éve elindítottam egy saját csatornát, és nagyon megkedveltem ezt a hobbit is. A nyáron ki is próbáltam, <br> egy videóvágó szoftvert a Vegas Pro-t, és azóta ezt használom, kisebb-nagyobb projektekhez egyaránt.</div>
+    <div class="hobbi">
+        <img src="Images/camaro.png" alt="Camaro" width="20">
+        <b>Autók</b>
+    </div>
+    <div class="hobbi2">Már kiskorom óta érdeklődöm az autók, autótuningolás, autóversenyek iránt. Ugyan nem tuninigoltam, és nem versenyeztem<br> még autóval, de rendszeresen fogyasztok ilyen típusú tartalmakat, és tanulok autókról. </div>
     <p>CÉLJAIM</p>
     <div id="celok">Érettségi után mindenképpen szeretnék továbbtanulni, emiatt 5 év múlva egyetemen/főiskolán hallgatóként képzelem el magam, <br> 10 év múlva programozóként szeretnék elhelyezkedni, és ebből is szeretnék megélni.</div>
 </body>
